--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400&700" rel="stylesheet">
-    <link rel="StyleSheet" type="text/css" href="css/style3.css">
+    <link rel="StyleSheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
